tests/rename/should_fail/T19843c.hs
module T19843c where

import Data.Map as Map
import Prelude (undefined, map)

foo (Map.Map k v) = undefined
