tests/rename/should_fail/T19843c.stderr
T19843c.hs:6:6: error: [GHC-01928]
    • Illegal term-level use of the type constructor ‘Map.Map’
    • imported from ‘Data.Map’ at T19843c.hs:3:1-22
      (and originally defined in ‘Data.Map.Internal’)
    • Note: The module ‘Data.Map’ does not export data constructor ‘Map’.
    • In the pattern: Map.Map k v
      In an equation for ‘foo’: foo (Map.Map k v) = undefined

